--- a/IGT.Webjet.Robotics_2.0/IGT.Webjet.ConfigMapsNSecrets/ConfigLogging.yaml
+++ b/IGT.Webjet.Robotics_2.0/IGT.Webjet.ConfigMapsNSecrets/ConfigLogging.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: ConfigLogging
+  name: logging-config
 data:
-  DELAY_INTERVAL: 60
+  DELAY_INTERVAL: "60"
   LOCAL_LOG_PATH: RoboticsLog/log.txt
   SERVICE_NAME: RoboticsLogging
   CLOUD_LOGGING_Q_NAME: roboticsloggingq
