Added Recloc in error msg

--- a/IGT.Webjet.Robotics_2.0/IGT.Webjet.ConfigMapsNSecrets/q2-pnr-removal-service-deployment.yaml
+++ b/IGT.Webjet.Robotics_2.0/IGT.Webjet.ConfigMapsNSecrets/q2-pnr-removal-service-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: DELAY_INTERVAL
           value: "60"
         - name: LOCAL_LOG_PATH
-          value: "RoboticsLog/log.0txt"
+          value: "RoboticsLog/log.txt"
         - name: SERVICE_NAME
           value: "RemovePNRFromQ"
         - name: GAL_Q_NUMBER
